--- a/index.html
+++ b/index.html
@@ -3,64 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Achraf's Portfolio Project</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Achraf's Portfolio</title>
 </head>
 <body>
+
+    <!-- Header Section -->
     <header>
-        <h1>Achraf's Portfolio Project</h1>
-        <nav>
-            <ul>
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#features">Features</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
-        </nav>
+        <h1>Welcome to My Portfolio</h1>
+        <img src="images/cover-image.jpg" alt="Cover Image" class="cover-image">
     </header>
 
-    <section id="intro">
-        <div class="cover-image">
-            <img src="images/cover-image.jpg" alt="Cover Image">
-        </div>
-        <h2>The Maze Project</h2>
-        <p>A 3D maze game using ray casting techniques.</p>
-        <a class="btn" href="https://your-deployed-app-link.com">Play the Game</a>
-    </section>
-
-    <section id="features">
-        <h2>Key Features</h2>
-        <div class="feature">
-            <img src="images/feature1-image.jpg" alt="Feature 1">
-            <h3>Feature 1</h3>
-            <p>Description of feature 1.</p>
-        </div>
-        <div class="feature">
-            <img src="images/feature2-image.jpg" alt="Feature 2">
-            <h3>Feature 2</h3>
-            <p>Description of feature 2.</p>
-        </div>
-        <div class="feature">
-            <img src="images/feature3-image.jpg" alt="Feature 3">
-            <h3>Feature 3</h3>
-            <p>Description of feature 3.</p>
-        </div>
-    </section>
-
-    <section id="about">
-        <h2>About the Project</h2>
-        <p>Inspired by my passion for game development and problem-solving, this project allowed me to apply my skills in C++ and SDL. This is a Portfolio Project for Holberton School.</p>
-        <p>Learn more about my team:</p>
+    <!-- Navigation Section -->
+    <nav>
         <ul>
-            <li><a href="https://www.linkedin.com/in/your-profile">LinkedIn</a></li>
-            <li><a href="https://github.com/lafertd">GitHub</a></li>
-            <li><a href="https://twitter.com/your-twitter">Twitter</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>GitHub Repository: <a href="https://github.com/lafertd/maze-project">Maze Project Repo</a></p>
+    </nav>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>I am a software engineering student with a keen interest in developing interactive applications. I enjoy problem-solving and am constantly seeking to learn new technologies and methodologies to enhance my skill set.</p>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Here are some of my notable projects:</p>
+        
+        <!-- Project 1 -->
+        <div class="project">
+            <h3>The Maze Project</h3>
+            <img src="images/feature1-screenshot.jpg" alt="Feature 1 Screenshot">
+            <p>This project is a 3D maze game created using ray casting techniques. The objective of the game is to navigate through a maze and reach the exit.</p>
+        </div>
+
+        <!-- Additional Projects -->
+        <div class="project">
+            <h3>Project 2</h3>
+            <img src="images/feature2-screenshot.jpg" alt="Feature 2 Screenshot">
+            <p>Description of project 2...</p>
+        </div>
+
+        <div class="project">
+            <h3>Project 3</h3>
+            <img src="images/feature3-screenshot.jpg" alt="Feature 3 Screenshot">
+            <p>Description of project 3...</p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Feel free to reach out for collaboration or inquiries!</p>
+        <p>GitHub: <a href="https://github.com/lafertd">My GitHub Profile</a></p>
+        <p>Discord: <a href="https://discord.com/channels/@me">lafertd#5050</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2024 Achraf's Portfolio Project</p>
-        <p>Contact me on Discord: lafertd#5050</p>
+        <p>&copy; 2024 Achraf's Portfolio</p>
     </footer>
 
     <script src="script.js"></script>
