--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
             </ul>
         </nav>
         <section id="intro">
-            <img src="images/cover-image.jpg" alt="Cover Image">
-            <h1>Achraf's Portfolio</h1>
-            <p>Your go-to place for innovative software solutions.</p>
-            <a href="#projects" class="cta-button">View Projects</a>
+            <img src="images/cover-image.jpg" alt="Cover Image" class="cover-image">
+            <div class="intro-text">
+                <h1>Achraf's Portfolio</h1>
+                <p>Your go-to place for innovative software solutions.</p>
+                <a href="#projects" class="cta-button">View Projects</a>
+            </div>
         </section>
     </header>
 
@@ -33,12 +35,12 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3>The Maze Project</h3>
-                <img src="images/feature1-screenshot.png" alt="Feature 1 Screenshot">
+                <img src="images/feature1-screenshot.png" alt="Feature 1 Screenshot" class="project-image">
                 <p>This project is a 3D maze game created using ray casting techniques.</p>
             </div>
             <div class="project">
                 <h3>Another Project</h3>
-                <img src="images/feature2-screenshot.png" alt="Feature 2 Screenshot">
+                <img src="images/feature2-screenshot.png" alt="Feature 2 Screenshot" class="project-image">
                 <p>Description of project 2...</p>
             </div>
         </section>
