--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="#intro">Home</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#blog">Blog</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
         </nav>
@@ -25,29 +26,42 @@
             <div class="intro-text">
                 <h1>Achraf's Portfolio</h1>
                 <p>Your go-to place for innovative software solutions.</p>
-                <a href="#projects" class="cta-button">View Projects</a>
+                <a href="#projects" class="cta-button">View Project</a>
             </div>
         </section>
     </header>
 
     <main>
         <section id="projects">
-            <h2>Projects</h2>
+            <h2>Project: The Maze</h2>
+            <p>This project is a 3D maze game created using ray casting techniques. It allows players to navigate through a maze, providing an engaging gaming experience.</p>
             <div class="project">
-                <h3>The Maze Project</h3>
                 <img src="images/feature1-screenshot.png" alt="Feature 1 Screenshot" class="project-image">
-                <p>This project is a 3D maze game created using ray casting techniques.</p>
+                <p>Feature 1: Explore the Maze</p>
             </div>
             <div class="project">
-                <h3>Another Project</h3>
                 <img src="images/feature2-screenshot.png" alt="Feature 2 Screenshot" class="project-image">
-                <p>Description of project 2...</p>
+                <p>Feature 2: Overcome Obstacles</p>
             </div>
+        </section>
+
+        <section id="blog">
+            <h2>Blog Article: My Journey in Software Development</h2>
+            <article>
+                <h3>Finding My Passion</h3>
+                <p>As a software engineering student, my journey into the tech world began with a simple fascination with how things work. I started by learning HTML and CSS, building small projects, and gradually expanding my knowledge to more complex programming languages.</p>
+                <p>The moment I created my first web application, I knew this was the path I wanted to pursue. The sense of accomplishment and the ability to bring ideas to life through code was exhilarating.</p>
+                <p>With each project, I've faced challenges that have pushed me to think critically and innovate. From debugging code to implementing user-friendly designs, every step has taught me valuable lessons about persistence and creativity.</p>
+                <p>In the future, I aim to work on projects that not only challenge me technically but also positively impact users' lives. I believe that technology can be a force for good, and I want to be part of that change.</p>
+                <footer>
+                    <p><em>Published on: September 24, 2024</em></p>
+                </footer>
+            </article>
         </section>
 
         <section id="about">
             <h2>About Me</h2>
-            <p>I'm a software engineering student passionate about developing interactive applications.</p>
+            <p>I'm a software engineering student passionate about developing interactive applications. I enjoy learning new technologies and improving my skills to create better solutions for users.</p>
         </section>
     </main>
 
