--- a/index.html
+++ b/index.html
@@ -4,64 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Achraf's Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Welcome to Achraf's Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#blog">Blog</a></li>
-            </ul>
-        </nav>
+    <header class="text-center py-5 bg-primary text-white">
+        <h1>Achraf's Portfolio</h1>
+        <p>Welcome to my portfolio showcasing my projects and journey in software development.</p>
     </header>
 
-    <main>
-        <section class="intro-text">
-            <img src="images/cover-image.jpg" alt="Cover Image" class="cover-image">
-            <h2>Discover My Work</h2>
-            <p>As a software engineering student, I am passionate about creating innovative solutions through code.</p>
+    <main class="container my-5">
+        <section class="text-center">
+            <img src="images/cover-image.jpg" alt="Cover Image" class="img-fluid mb-4">
         </section>
 
-        <section id="projects">
+        <section class="mb-5">
             <h2>My Projects</h2>
-            <div class="project">
-                <h3>Project 1</h3>
-                <img src="images/feature1-screenshot.png" alt="Project 1 Screenshot" class="project-image">
-                <p>This project is a 3D maze game created using ray casting techniques.</p>
-            </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <img src="images/feature2-screenshot.png" alt="Project 2 Screenshot" class="project-image">
-                <p>Description of project 2...</p>
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>Project 1</h3>
+                    <img src="images/feature1-screenshot.png" alt="Project 1 Screenshot" class="img-fluid mb-2">
+                    <p>This project is a 3D maze game created using ray casting techniques.</p>
+                </div>
+                <div class="col-md-6">
+                    <h3>Project 2</h3>
+                    <img src="images/feature2-screenshot.png" alt="Project 2 Screenshot" class="img-fluid mb-2">
+                    <p>Description of project 2...</p>
+                </div>
             </div>
         </section>
 
-        <section id="blog">
+        <section class="blog-article mb-5">
             <h2>Blog Article: My Journey in Software Development</h2>
-            <div class="blog-article">
-                <h3>Finding My Passion</h3>
-                <p>As a software engineering student, my journey into the tech world began with a simple fascination with how things work. I started by learning HTML and CSS, building small projects, and gradually expanding my knowledge to more complex programming languages.</p>
-                <p>The moment I created my first web application, I knew this was the path I wanted to pursue. The sense of accomplishment and the ability to bring ideas to life through code was exhilarating.</p>
-                <p>With each project, I've faced challenges that have pushed me to think critically and innovate. From debugging code to implementing user-friendly designs, every step has taught me valuable lessons about persistence and creativity.</p>
-                <p>In the future, I aim to work on projects that not only challenge me technically but also positively impact users' lives. I believe that technology can be a force for good, and I want to be part of that change.</p>
-                <p class="read-more"><a href="#">Read More</a></p>
-                <p><strong>Published on:</strong> September 24, 2024</p>
-            </div>
+            <p>Finding My Passion</p>
+            <p>As a software engineering student, my journey into the tech world began with a simple fascination with how things work. I started by learning HTML and CSS, building small projects, and gradually expanding my knowledge to more complex programming languages.</p>
+            <p>The moment I created my first web application, I knew this was the path I wanted to pursue. The sense of accomplishment and the ability to bring ideas to life through code was exhilarating.</p>
+            <p>With each project, I've faced challenges that have pushed me to think critically and innovate. From debugging code to implementing user-friendly designs, every step has taught me valuable lessons about persistence and creativity.</p>
+            <p>In the future, I aim to work on projects that not only challenge me technically but also positively impact users' lives. I believe that technology can be a force for good, and I want to be part of that change.</p>
+            <p class="text-right"><a href="#" class="btn btn-primary">Read More</a></p>
+            <p>Published on: September 24, 2024</p>
         </section>
 
-        <section id="about-me">
+        <section class="about-me mb-5">
             <h2>About Me</h2>
             <p>I'm a software engineering student passionate about developing interactive applications. I enjoy learning new technologies and improving my skills to create better solutions for users.</p>
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Achraf's Portfolio</p>
-        <p>GitHub: <a href="https://github.com/lafertd" style="color: white;">lafertd</a> | Discord: <a href="https://discord.com/channels/@me" style="color: white;">laferd#5050</a></p>
+    <footer class="text-center py-4 bg-light">
+        <p>&copy; 2024 Achraf. All rights reserved.</p>
+        <p>GitHub: <a href="https://github.com/lafertd" target="_blank">lafertd</a></p>
+        <p>Discord: <a href="https://discord.com/users/lafertd#5050">lafertd#5050</a></p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
